kubernetes/2_SSL_ingress/service-c2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-c2
  labels:
    purpose: istio-demo
spec:
  selector:
    matchLabels:
      app: service-c
      version: v2
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: service-c
        purpose: istio-demo
        version: v2
    spec:
      containers:
        - name: service-c2
          image: image-registry.openshift-image-registry.svc:5000/default/myservice:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
