kubernetes/2_SSL_ingress/service-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
spec:
  selector:
    matchLabels:
      app: service-b
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: service-b
    spec:
      containers:
        - name: service-b
          image: image-registry.openshift-image-registry.svc:5000/default/myservice:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
  labels:
    app: service-b
spec:
  ports:
   - port: 80
     name: http
     targetPort: 8080
  selector:
   app: service-b
