kubernetes/2_SSL_ingress/destination_rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-c
spec:
  host: service-c
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
