kubernetes/2_SSL_ingress/virtual-service2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-c
spec:
  hosts:
  - service-c
  http:
  - route:
    - destination:
        host: service-c
        subset: v1
      weight: 50 
    - destination:
        host: service-c
        subset: v2
      weight: 50
